--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.1", features = ["derive"] }
+crossterm = "0.27.0"
+ratatui = { version = "0.26.1", features = ["all-widgets"] }
 serialport = "4.3.0"
